# Eri-Rpg

./: .gitignore  AGENTS.md  CHANGES.md  CLAUDE.md  CODER-DOCTOR.md  DESIGN.md  DRIFT_INTEGRATION_PLAN.md  EMPOWERMENT.md  GSD-BLUEPRINT.md  HANDOFF.md  INTERNALS.md  LICENSE  NOTES.md  README.md  STATUS.md  TODO-SKILL-MIGRATION.md  agent_loop_needed_items.md  audit1_27_26.md  bugs1.txt  er-rpg_guts.md  fullPLAN.md  phase0_tickets.md  phase1_tickets.md  phase2_tickets.md  phase3_tickets.md  phase4_tickets.md  phase5_tickets.md  phase6_tickets.md  phase7_tickets.md  phase8_tickets.md  pyproject.toml  rpg_plan.txt  summary.txt  to_accomplish.txt
.claude-plugin/: INSTALL.md  README.md  plugin.json
.eri-rpg/: STATUS.md
.planning/: PROJECT.md  ROADMAP.md
docs/: AGENT_WORKFLOW.md  ARCHITECTURE.md  AUDIT_GSD_VS_CODER.md  BLUEPRINT-BEHAVIOR.md  CHANGELOG.md  CLAUDE_CODE.md  CODER-COMMANDS.md  CODER-QUICKSTART.md  CODER-USAGE.md  CODER_WORKFLOW_AUDIT_2026-02-04.md  DRIFT_NOTES.md  ERI-COMMANDS.md  ERI-QUICKSTART.md  GSD_AND_WORKFLOW.md  INSTALL.md  MANUAL.md  NOTES.md  POWER_USER_GUIDE.md  QUICK_REFERENCE.md  REPO_RULES.md  TYPICAL_WORKFLOW.md  USAGE.md
erirpg/: __init__.py  analyze.py  benchmarks.py  cache.py  claudemd.py  cli.py  code_verifier.py  commands.py  commit.py  config.py  context.py  diagnostics.py  discovery.py  discuss.py  drift_bridge.py  eri_planner.py  graph.py  hooks.py  implement.py  indexer.py  install.py  knowledge.py  memory.py  migration.py  must_haves.py  ops.py  pattern_sync.py  persona.py  planner.py  preflight.py  quick.py  refs.py  registry.py  research.py  review.py  runner.py  runs.py  scaffold.py  search.py  session_context.py  (+13 more)
(+400 files in other folders)
