[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "erirpg"
version = "0.60.0"
description = "Cross-project feature transplant tool for Claude Code"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Alex"}
]
keywords = ["code", "transplant", "refactoring", "claude", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]
rust = [
    "tree-sitter>=0.20",
    "tree-sitter-rust",
]
typescript = [
    "tree-sitter>=0.20",
    "tree-sitter-typescript",
]
ui = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "jinja2>=3.1.0",
    "sse-starlette>=1.6.0",
]

[project.scripts]
eri-rpg = "erirpg.cli:main"

[project.urls]
Homepage = "https://github.com/alex/eri-rpg"

[tool.setuptools.packages.find]
where = ["."]
include = ["erirpg*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # Line too long - handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
